# users_fork

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 3ae3e7cbfd0e_create_user_table.py  6482e85b1973_add_user_columns.py
src/config/: database.py  settings.py
src/exceptions/: base.py
src/models/: users.py
src/repositories/: base.py  users.py
src/routers/: base_router.py  users.py
src/schemas/: users.py
src/services/: emails.py  users.py
